
SUBDIRS = src man data

MAINTAINERCLEANFILES = \
ABOUT-NLS* \
Makefile.in \
aclocal.m4 \
compile \
config.guess \
config.h.in \
config.h.in~ \
config.rpath \
config.sub \
configure \
depcomp \
install-sh \
ltmain.sh \
missing

desktopdir = $(datadir)/applications
desktop_DATA = zarfy.desktop

icondir = $(datadir)/icons/hicolor/48x48/apps
icon_DATA = data/zarfy.png 

EXTRA_DIST = \
	$(desktop_DATA) \
	$(icon_DATA) 
